apps/simg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simg
  namespace: simg
  labels:
    app: simg
spec:
  type: ClusterIP
  selector:
    app: simg
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
