apps/simg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simg
  namespace: simg
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simg
                port:
                  number: 80
